Änderungen und LAyout-Template Start

--- a/_includes/app.scss
+++ b/_includes/app.scss
@@ -32,6 +32,7 @@
 @import "project-sponsores";
 @import "lightbox";
 @import "kurzinformation";
+@import "start";
 
 @import "projekt-detail-header";
 @import "media-detail-header";
