--- a/_sass/menu.scss
+++ b/_sass/menu.scss
@@ -10,10 +10,12 @@
     background-color: #fff;
     width: 100%;
     height: 88px; 
+    // height: 60px; 
     padding: 0 8px; 
     z-index: 3; 
 
 }
+
 
 .sub-menu-container{
     position: absolute; 
@@ -63,7 +65,9 @@
 }
 
 .logo{
-    margin-top: 8px; 
+    margin-top: 4px;
+    // transform: scale(0.65) translateY(-8px) ; 
+  
 }
 
 .sub-menu-wrapper{
