upload service teil 1

--- a/_includes/app.scss
+++ b/_includes/app.scss
@@ -18,6 +18,7 @@
 @import "box-kalender";
 @import "statement";
 @import "info-box";
+@import "text-styles";
 
 
 @import "card-wrapper";
@@ -33,6 +34,7 @@
 @import "lightbox";
 @import "kurzinformation";
 @import "start";
+@import "newsletter";
 
 @import "projekt-detail-header";
 @import "media-detail-header";
