--- a/_sass/card-wrapper.scss
+++ b/_sass/card-wrapper.scss
@@ -47,7 +47,8 @@
             }
             .info{
                 h3{
-                    line-height: 1.1; 
+					line-height: 1.1; 
+					margin-bottom: 8px; 
                 }
             }
 		}
@@ -93,7 +94,8 @@
             }
             .info{
                 h3{
-                    line-height: 1.1; 
+					line-height: 1.1; 
+					margin-bottom: 8px; 
                 }
             }
 		}
@@ -133,7 +135,8 @@
             }
             .info{
                 h3{
-                    line-height: 1.1; 
+					line-height: 1.1;
+					margin-bottom: 8px;  
                 }
             }
 		}
@@ -506,7 +509,8 @@
             }
             .info{
                 h3{
-                    line-height: 1.1; 
+					line-height: 1.1; 
+					margin-bottom: 8px; 
                 }
             }
 		}
@@ -582,7 +586,8 @@
             }
             .info{
                 h3{
-                    line-height: 1.1; 
+					line-height: 1.1; 
+					margin-bottom: 8px; 
                 }
             }
 		}
