--- a/_sass/header-toplevel.scss
+++ b/_sass/header-toplevel.scss
@@ -82,7 +82,7 @@
                 margin-right: 2px; 
             }   
         }
-        p{  
+        .intro{  
             max-width: 768px; 
             margin: 128px auto 0 auto; 
         }
@@ -111,7 +111,7 @@
                 margin-right: 2px; 
             }   
         }
-        p{  
+        .intro{  
             max-width: 768px; 
             margin: 128px auto 0 auto; 
         }
