--- a/_includes/app.scss
+++ b/_includes/app.scss
@@ -40,6 +40,7 @@
 @import "media-detail-header";
 @import "veranstaltung-detail-header";
 @import "header-toplevel";
+@import "menu-responsive";
 
 
 
