--- a/_sass/newsletter.scss
+++ b/_sass/newsletter.scss
@@ -21,8 +21,15 @@
 
 .input-suche{
   @extend .input-email;
-  margin-bottom: 16px; 
+  margin-bottom: 0; 
   background-color: map-get($colors, yellow ); 
+}
+
+.input-suche-button{
+  height: 40px;
+  width: 40px; 
+  border-radius: 100%;
+  margin-left: 8px;  
 }
 
 .input--warning{
